--- a/home/index.html
+++ b/home/index.html
@@ -9,7 +9,7 @@
             <a href="../contact/contact.html">Contact</a>
             <a href="../photos/photos.html">Photography</a>
             <a href="../code_projects/codeProjects.html">Code</a>
-            <a class="active" id="homeTab" href="home.html">Grace Yang</a>
+            <a class="active" id="homeTab" href="index.html">Grace Yang</a>
         </div>
 
         <div id="homeTitlePanel">
