home page edits + made photo page

--- a/home/home.html
+++ b/home/home.html
@@ -2,20 +2,20 @@
 <html>
     <link rel="stylesheet" href="homeStyle.css">
     <head>
-        <title>Grace Yang</title>
+        <title>Grace Yang | Home</title>
     </head>
     <body>
         <div class="tabBar">
             <a href="../contact/contact.html">Contact</a>
-            <a href="../photos/photos.html">Photography</a>
+            <a href="../photography/photos.html">Photography</a>
             <a href="../code_projects/codeProjects.html">Code</a>
-            <a class="active" id="homeTab" href="index.html">Grace Yang</a>
+            <a class="active" id="homeTab" href="../home/home.html">Grace Yang</a>
         </div>
 
         <div id="homeTitlePanel">
-            <h1 id="homeTitle">Grace Yang</h1>
-            <hr width="15%" align="center">
-            <h3 style="text-align: center;">aspiring computer science/engineering student, game developer & photographer</h3>
+            <h1>Grace Yang</h1>
+            <hr width="35%" align="center" style="border-top: 5px solid #d3d8e0">
+            <h2 style="text-align: center; margin-top: 50px;">freshman computer science student at the University of Maryland-College Park</h2>
         </div>
 
         <div id="homePage"> 
