added socials, contact

--- a/home/home.html
+++ b/home/home.html
@@ -13,11 +13,19 @@
         </div>
 
         <div id="homeTitlePanel">
-            <h1>Grace Yang</h1>
+            <h1>Grace   Yang</h1>
             <hr width="35%" align="center" style="border-top: 5px solid #d3d8e0">
-            <h2 style="text-align: center; margin-top: 50px;">freshman computer science student at the University of Maryland-College Park</h2>
+            <h2 style="text-align: center; margin-top: 45px;">freshman computer science student at the University of Maryland-College Park</h2>
         </div>
-
+        
+        <div id="socials">
+            <a target="_blank" href="https://www.linkedin.com/in/grace-yang-61277b245/">
+                <img src="LI-In-Bug.png" alt="LinkedIn logo" width="64.6759259" height="55" style="margin-right: 5px">
+            </a>
+            <a target="_blank" href="https://github.com/Grassias10">
+                <img src="github-mark-white.png" alt="GitHub logo" width="56.2222222" height="55">
+            </a>
+        </div>
         <div id="homePage"> 
         </div>
     </body>
