--- a/photography/photos.html
+++ b/photography/photos.html
@@ -9,7 +9,7 @@
             <a href="../contact/contact.html">Contact</a>
             <a href="../photography/photos.html">Photography</a>
             <a href="../code_projects/codeProjects.html">Code</a>
-            <a class="active" id="homeTab" href="../home/home.html">Grace Yang</a>
+            <a class="active" id="homeTab" href="../home/index.html">Grace Yang</a>
         </div>
 
         <div id="photoMenu"> 
