ok it's def fixed now

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <div class="tabBar">
-            <a href="../contact/contact.html">Contact</a>
-            <a href="../photography/photos.html">Photography</a>
+            <a href="../grassias10.github.io/contact/contact.html">Contact</a>
+            <a href="../grassias10.github.io/photography/photos.html">Photography</a>
             <a href="../code_projects/codeProjects.html">Code</a>
-            <a class="active" id="homeTab" href="../home/index.html">Grace Yang</a>
+            <a class="active" id="homeTab" href="../index.html">Grace Yang</a>
         </div>
 
         <div id="homeTitlePanel">
@@ -20,10 +20,10 @@
         
         <div id="socials">
             <a target="_blank" href="https://www.linkedin.com/in/grace-yang-61277b245/">
-                <img src="LI-In-Bug.png" alt="LinkedIn logo" width="64.6759259" height="55" style="margin-right: 5px">
+                <img src="../grassias10.github.io/home/LI-In-Bug.png" alt="LinkedIn logo" width="64.6759259" height="55" style="margin-right: 5px">
             </a>
             <a target="_blank" href="https://github.com/Grassias10">
-                <img src="github-mark-white.png" alt="GitHub logo" width="56.2222222" height="55">
+                <img src="../grassias10.github.io/home/github-mark-white.png" alt="GitHub logo" width="56.2222222" height="55">
             </a>
         </div>
         <div id="homePage"> 
