--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="tabBar">
             <a href="../grassias10.github.io/contact/contact.html">Contact</a>
             <a href="../grassias10.github.io/photography/photos.html">Photography</a>
-            <a href="../code_projects/codeProjects.html">Code</a>
+            <a href="../grassias10.github.io/code/code.html">Code</a>
             <a class="active" id="homeTab" href="../index.html">Grace Yang</a>
         </div>
 
