--- a/photography/photos.html
+++ b/photography/photos.html
@@ -8,12 +8,13 @@
         <div class="tabBar">
             <a href="../contact/contact.html">Contact</a>
             <a href="../photography/photos.html">Photography</a>
-            <a href="../code_projects/codeProjects.html">Code</a>
+            <a href="../code/code.html">Code</a>
             <a class="active" id="homeTab" href="../index.html">Grace Yang</a>
         </div>
 
         <div id="photoMenu"> 
-            
+            <img src="iceland_waterfall.jpg" alt="iceland waterfall" width="35%" height="auto">   
+            <img src="iceland_orange_lighthouse.jpg" alt="orange icelandic lighthouse" width="25%" height="auto">
         </div>
     </body>
     <script type="text/javascript" src="homeScript.js"></script>
