--- a/contact/contact.html
+++ b/contact/contact.html
@@ -8,7 +8,7 @@
         <div class="tabBar">
             <a href="../contact/contact.html">Contact</a>
             <a href="../photography/photos.html">Photography</a>
-            <a href="../code_projects/codeProjects.html">Code</a>
+            <a href="../code/code.html">Code</a>
             <a class="active" id="homeTab" href="../index.html">Grace Yang</a>
         </div>
 
